Resolving minor bug where company logo overlaped next column

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,3 +19,7 @@
   }
 }
 
+.company-logo {
+  max-height: 100%;
+  max-width: 100%;
+  opacity: 1; }
